--- a/SquiLu/squilu.cbp
+++ b/SquiLu/squilu.cbp
@@ -802,6 +802,61 @@
 					<Add directory="../libharu/src" />
 				</Linker>
 			</Target>
+			<Target title="AST Debug FLTK 64bits">
+				<Option output="bin/squilu-ast" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="samples" />
+				<Option object_output="obj/Debug/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Option parameters="test-sqlexer.nut" />
+				<Compiler>
+					<Add option="-Wall" />
+					<Add option="-g" />
+					<Add option="-DWITH_FLTK=1" />
+					<Add option="-DNDEBUG2=1" />
+					<Add option="-DWITH_FULL_DAD_EXTRAS=1" />
+					<Add option="-DPROFILE_SQVM22=1" />
+					<Add option="-D_SQ64=1" />
+					<Add option="-DCONFIG_64=1" />
+					<Add option="-DHAS_UNIX_DOMAIN_SOCKETS=1" />
+					<Add option="-DUSE_SIGNAL_HANDLER=1" />
+					<Add option="-DWITH_MYSQL=1" />
+					<Add option="-DWITH_POSTGRESQL=1" />
+					<Add option="-DWITH_DNS_SD2=1" />
+					<Add option="-DSQLITE_DEBUG=1" />
+					<Add option="-DSQLITE_ENABLE_EXPLAIN_COMMENTS=1" />
+					<Add directory="../../zeromq-3.2.2/include" />
+					<Add directory="../fltk" />
+					<Add directory="../libharu/include" />
+					<Add directory="../flu" />
+				</Compiler>
+				<Linker>
+					<Add library="pthread" />
+					<Add library="rt" />
+					<Add library="dl" />
+					<Add library="fltkutils" />
+					<Add library="fltk_images" />
+					<Add library="fltk_png" />
+					<Add library="fltk_jpeg" />
+					<Add library="fltk_z" />
+					<Add library="fltk" />
+					<Add library="Xext" />
+					<Add library="Xft" />
+					<Add library="Xinerama" />
+					<Add library="mpdecimal" />
+					<Add library="hpdfs" />
+					<Add library="discount" />
+					<Add library="X11" />
+					<Add library="fontconfig" />
+					<Add library="axtls" />
+					<Add library="Xcursor" />
+					<Add library="Xfixes" />
+					<Add directory="../../zeromq-3.2.2" />
+					<Add directory="../fltk/lib" />
+					<Add directory="../flu" />
+					<Add directory="../libharu/src" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-std=c++11" />
@@ -920,6 +975,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/dynamic_library.h">
 			<Option target="Debug" />
@@ -941,6 +997,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/fpdf.cpp" />
 		<Unit filename="../SquiLu-ext/fpdf.h" />
@@ -964,6 +1021,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/lua_socket.h">
 			<Option target="Debug" />
@@ -985,6 +1043,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/mongoose.c">
 			<Option compilerVar="CC" />
@@ -1007,6 +1066,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/mongoose.h">
 			<Option target="Debug" />
@@ -1028,6 +1088,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/pdf-font.cpp">
 			<Option target="Debug" />
@@ -1049,6 +1110,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/pdf-font.h">
 			<Option target="Debug" />
@@ -1070,6 +1132,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_axtls.c">
 			<Option compilerVar="CC" />
@@ -1092,6 +1155,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_base64.cpp">
 			<Option target="Debug" />
@@ -1113,6 +1177,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_civetweb.cpp">
 			<Option target="Temp Code FLTK 64bits" />
@@ -1136,6 +1201,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_dns_sd.cpp" />
 		<Unit filename="../SquiLu-ext/sq_fastcgi.cpp">
@@ -1162,6 +1228,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_fpdf.cpp" />
 		<Unit filename="../SquiLu-ext/sq_fs.c">
@@ -1185,6 +1252,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_gumbo.cpp" />
 		<Unit filename="../SquiLu-ext/sq_libclang.cpp" />
@@ -1207,6 +1275,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mix.cpp">
 			<Option target="Debug" />
@@ -1228,6 +1297,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mongoose.cpp">
 			<Option target="Debug" />
@@ -1249,6 +1319,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mysql.cpp" />
 		<Unit filename="../SquiLu-ext/sq_openssl.cpp">
@@ -1273,6 +1344,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_postgresql.cpp">
 			<Option target="Debug" />
@@ -1293,6 +1365,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_rs232.c">
 			<Option compilerVar="CC" />
@@ -1315,6 +1388,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_slave_vm.cpp">
 			<Option target="Debug" />
@@ -1336,6 +1410,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_socket.cpp">
 			<Option target="Debug" />
@@ -1357,6 +1432,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_sqlite3.cpp">
 			<Option target="Debug" />
@@ -1378,6 +1454,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_sqlite3.h" />
 		<Unit filename="../SquiLu-ext/sq_sys.cpp">
@@ -1403,6 +1480,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_unql.cpp" />
 		<Unit filename="../SquiLu-ext/sq_zlib.cpp">
@@ -1425,6 +1503,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqlite3.c">
 			<Option compilerVar="CC" />
@@ -1447,6 +1526,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqlite3.h">
 			<Option target="Debug" />
@@ -1468,6 +1548,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqmodule.h">
 			<Option target="Debug" />
@@ -1489,6 +1570,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqratimport.cpp">
 			<Option target="Debug" />
@@ -1510,6 +1592,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqratimport.h">
 			<Option target="Debug" />
@@ -1531,6 +1614,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/tinyxml2.cpp">
 			<Option target="Debug" />
@@ -1552,6 +1636,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/tinyxml2.h">
 			<Option target="Debug" />
@@ -1573,6 +1658,7 @@
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Debug 64bits static Library" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="dadbiz.rc">
 			<Option compilerVar="WINDRES" />
@@ -1580,6 +1666,7 @@
 			<Option target="Release FLTK win32" />
 			<Option target="Release FLTK win32 no console" />
 		</Unit>
+		<Unit filename="include/sqconfig.h" />
 		<Unit filename="include/sqstdaux.h" />
 		<Unit filename="include/sqstdblob.h" />
 		<Unit filename="include/sqstdio.h" />
@@ -1608,6 +1695,7 @@
 			<Option target="Debug FLTK 64bits" />
 			<Option target="Debug FLTK 64bits asan" />
 			<Option target="Temp Code FLTK 64bits" />
+			<Option target="AST Debug FLTK 64bits" />
 		</Unit>
 		<Unit filename="sqstdlib/sqstdaux.cpp" />
 		<Unit filename="sqstdlib/sqstdblob.cpp" />
@@ -1623,14 +1711,40 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="squirrel/lua-regex.h" />
+		<Unit filename="squirrel/sq_lexer.cpp" />
 		<Unit filename="squirrel/sqapi.cpp" />
 		<Unit filename="squirrel/sqarray.h" />
 		<Unit filename="squirrel/sqbaselib.cpp" />
 		<Unit filename="squirrel/sqclass.cpp" />
 		<Unit filename="squirrel/sqclass.h" />
 		<Unit filename="squirrel/sqclosure.h" />
-		<Unit filename="squirrel/sqcompiler.cpp" />
+		<Unit filename="squirrel/sqcompiler.cpp">
+			<Option target="Debug" />
+			<Option target="Release" />
+			<Option target="Release clang" />
+			<Option target="Release win32" />
+			<Option target="Release FLTK" />
+			<Option target="Debug FLTK" />
+			<Option target="Release FLTK win32" />
+			<Option target="Release FLTK win32 no console" />
+			<Option target="Release alone" />
+			<Option target="Release alone wince" />
+			<Option target="Release wince" />
+			<Option target="Release 64bits" />
+			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
+			<Option target="Release 64bits static Library" />
+			<Option target="Debug FLTK 64bits" />
+			<Option target="Debug FLTK 64bits asan" />
+			<Option target="Debug 64bits static Library" />
+			<Option target="Temp Code FLTK 64bits" />
+		</Unit>
 		<Unit filename="squirrel/sqcompiler.h" />
+		<Unit filename="squirrel/sqcompiler2.cpp">
+			<Option target="AST Debug FLTK 64bits" />
+		</Unit>
 		<Unit filename="squirrel/sqdebug.cpp" />
 		<Unit filename="squirrel/sqfuncproto.h" />
 		<Unit filename="squirrel/sqfuncstate.cpp" />
