--- a/myaxtls/Makefile
+++ b/myaxtls/Makefile
@@ -2,7 +2,8 @@ CFLAGS = -O3 -DSSL_STATIC_LIBRARY=1 -DAXTLS_LIBRARY=1 -DAS_STATIC_LIB=1 -DCONFIG
 
 SOURCES= aes.c asn1.c bigint.c crypto_misc.c gen_cert.c hmac.c \
     loader.c sha256.c md5.c openssl.c os_port.c p12.c rc4.c \
-    rsa.c sha1.c tls1.c tls1_clnt.c tls1_svr.c x509.c
+    rsa.c sha1.c tls1.c tls1_clnt.c tls1_svr.c x509.c \
+    sha384.c sha512.c
 
 OBJECTS = $(SOURCES:.c=.o)
 
