--- a/SquiLu/Makefile-SquiLu-ios-through-linux
+++ b/SquiLu/Makefile-SquiLu-ios-through-linux
@@ -49,7 +49,9 @@ CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
     -DWITH_UUID=1 \
     -DSQLITE_ENABLE_JSON1=1 \
     -DSQLITE_OMIT_PREPARED=1 \
-    -DTARGET_IOS=1 -DWITHOUTH_SHA512=1
+    -DTARGET_IOS=1 -DWITHOUTH_SHA512=1 \
+    -DSQ_USE_MKSTEMP=1 \
+    -DSQ_USE_LOCALTIME_R=1
 
 RESINC = 
 LIBDIR = -L$(MYSDKPREFIX)/lib -L$(MYSDKPREFIX)/lib/system -Llib
