--- a/SquiLu/Makefile-SquiLu-ios-through-linux
+++ b/SquiLu/Makefile-SquiLu-ios-through-linux
@@ -51,7 +51,8 @@ CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
     -DSQLITE_OMIT_PREPARED=1 \
     -DTARGET_IOS=1 -DWITHOUTH_SHA512=1 \
     -DSQ_USE_MKSTEMP=1 \
-    -DSQ_USE_LOCALTIME_R=1
+    -DSQ_USE_LOCALTIME_R=1 \
+    -DSQ_ENABLE_INCLUDES=1
 
 RESINC = 
 LIBDIR = -L$(MYSDKPREFIX)/lib -L$(MYSDKPREFIX)/lib/system -Llib
