--- a/SquiLu/Makefile-SquiLu-PI3
+++ b/SquiLu/Makefile-SquiLu-PI3
@@ -104,6 +104,9 @@ SOURCES= \
     ../SquiLu-ext/sq_zlib.cpp  \
     ../SquiLu-ext/tinyxml2.cpp \
     ../SquiLu-ext/dad_utils.cpp \
+    ../SquiLu-ext/randombytes.c \
+    ../SquiLu-ext/tweetnacl.c \
+    ../SquiLu-ext/sq_tweetnacl.cpp \
     squirrel/lua-regex.c  \
     squirrel/sqapi.cpp  \
     squirrel/sqbaselib.cpp  \
