--- a/SquiLu/Makefile-SquiLu-ios-through-linux
+++ b/SquiLu/Makefile-SquiLu-ios-through-linux
@@ -102,6 +102,9 @@ SOURCES= sq/sq.c  \
     ../SquiLu-ext/sq_zlib.cpp  \
     ../SquiLu-ext/tinyxml2.cpp \
     ../SquiLu-ext/dad_utils.cpp \
+    ../SquiLu-ext/sq_tweetnacl.cpp \
+    ../SquiLu-ext/tweetnacl.c \
+    ../SquiLu-ext/randombytes.c \
     squirrel/lua-regex.c  \
     squirrel/sqapi.cpp  \
     squirrel/sqbaselib.cpp  \
