--- a/SquiLu/Makefile-SquiLu-PI3
+++ b/SquiLu/Makefile-SquiLu-PI3
@@ -3,7 +3,8 @@
 #INC =  -Iinclude -Isqstdlib -I../myaxtls -I../discount -I..
 INC =  -Iinclude -Isqstdlib -Isquirrel -I../myaxtls -I../discount \
     -I../gumbo -I.. -I../minizip \
-    -I/usr/include/mysql -I/usr/include/postgresql -I../unql/src
+    -I/usr/include/mysql -I/usr/include/postgresql -I../unql/src \
+    -I../libffi-3.2.1/rpi/include
 #CFLAGS =  -Wall -fno-strict-aliasing -DSQ_JIT_LLVM44=1 -D_DEBUG_DUMP33=1 -DWITH_DAD_EXTRAS=1 -DSQ_SUBLATIN=1 -DNEED_SUBLATIN_C2=1 -DSQUSEDOUBLE=1 -DSQUSEDECIMAL64x=1 -DNO_EXCEPTION_KEY_NOT_FOUND0=1 -D_SQ642=1 -DNO_GARBAGE_COLLECTOR00=1 -DSQLITE_DEFAULT_FILE_FORMAT=4 -DSQLITE_DEFAULT_AUTOVACUUM=1 -DSQLITE_DEFAULT_FOREIGN_KEYS=1 -DSQLITE_ENABLE_COLUMN_METADATA=1 -DSQLITE_ENABLE_EXTENSION_FUNCTIONS=1 -DSQLITE_ENABLE_FTS3=1 -DSQLITE_ENABLE_FTS3_PARENTHESIS=1 -DSQLITE_ENABLE_UNLOCK_NOTIFY=1 -DSQLITE_ENABLE_RTREE=1 -DSQLITE_ENABLE_STAT3=1 -DSQLITE_HAS_CODEC=1 -DSQLITE_OMIT_TCL_VARIABLE=1 -DSQLITE_USE_URI=1 -DSQLITE_SOUNDEX=1 -DNO_POPEN=1 -DNO_SSL_DL=1 -DHAVE_STDINT=1 -DUSE_AXTLS=1 -DUSE_AXTLS_ON_MEMORY=1 -D_FILE_OFFSET_BITS=64 -DSSL_STATIC_LIBRARY=1 -DPDF_USING_ZLIB=1 -DRS232_STATIC=1
 CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
     -DCONFIG_32=1 \
@@ -58,7 +59,9 @@ CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
     -DSQ_USE_MKSTEMP=1 \
     -DSQ_USE_LOCALTIME_R=1 \
     -DSQ_ENABLE_INCLUDES=1 \
-    -DSQ_USE_EASYCURL=1
+    -DWITH_FFI=1 \
+    -DSQ_USE_EASYCURL=1 \
+    -DSLAVE_VM_WITH_OS_THREADS=1
 
 RESINC = 
 #LIBDIR =  -Llib -L../myaxtls -L../mpdecimal -L../discount
@@ -66,7 +69,8 @@ LIBDIR =  -Llib -L../myaxtls -L../mpdecimal-2.4.1/libmpdec -L../discount -L../gu
 LIB =  -lm
 #LDFLAGS =  -lpthread -lrt -ldl -laxtls -lmpdecimal -ldiscount -lz
 #LDFLAGS =  -lpthread -lrt -ldl -luuid -laxtls -lmpdecimal -ldiscount -lgumbo -lminizip -lz -lunql
-LDFLAGS =  -lpthread -ldl -laxtls -lmpdec -ldiscount -lgumbo -lminizip -lz -lunql -luuid
+LDFLAGS =  -lpthread -ldl -laxtls -lmpdec -ldiscount -lgumbo -lminizip \
+    -lz -lunql -luuid ../libffi-3.2.1/rpi/.libs/libffi.a
 CC = gcc
 CXX = g++ -std=c++11
 
@@ -87,7 +91,7 @@ SOURCES= \
     ../SquiLu-ext/sq_axtls.c  \
     ../SquiLu-ext/sq_base64.cpp  \
     ../SquiLu-ext/sq_fpdf.cpp  \
-    ../SquiLu-ext/sq_fs.c  \
+    ../SquiLu-ext/sq_fs.cpp  \
     ../SquiLu-ext/sq_gumbo.cpp  \
     ../SquiLu-ext/sqlite3.c  \
     ../SquiLu-ext/sq_unql.c  \
@@ -110,6 +114,8 @@ SOURCES= \
     ../SquiLu-ext/randombytes.c \
     ../SquiLu-ext/tweetnacl.c \
     ../SquiLu-ext/sq_tweetnacl.cpp \
+    ../SquiLu-ext/sq_pack.cpp \
+    ../SquiLu-ext/sq_ffi.cpp \
     squirrel/lua-regex.c  \
     squirrel/sqapi.cpp  \
     squirrel/sqbaselib.cpp  \
