--- a/SquiLu/Makefile-SquiLu-PI3
+++ b/SquiLu/Makefile-SquiLu-PI3
@@ -39,9 +39,12 @@ CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
     -DSQLITE_OMIT_TCL_VARIABLE=1 \
     -DSQLITE_SOUNDEX=1 \
     -DSQLITE_USE_URI=1 \
+	-DUSE_BITVECTOR=1 \
     -DSQLITE_OMIT_PREPARED=1 \
     -DSQLITE_ENABLE_JSON1=1 \
     -DSQLITE_USE_DECIMAL2=1 \
+	-DSQLITE_ENABLE_SESSION=1 \
+	-DSQLITE_ENABLE_PREUPDATE_HOOK=1 \
     -DSQ_SUBLATIN=1 \
     -DSQUSEDECIMAL64x=1 \
     -DSQUSEDOUBLE=1 \
@@ -98,7 +101,7 @@ SOURCES= \
     ../SquiLu-ext/sq_decimal.cpp  \
     ../SquiLu-ext/sq_libcurl.cpp  \
     ../SquiLu-ext/sq_markdown.cpp  \
-    ../SquiLu-ext/sq_mix.c \
+    ../SquiLu-ext/sq_mix.cpp \
     ../SquiLu-ext/sq_mongoose.cpp  \
     ../SquiLu-ext/sq_mysql.cpp  \
     ../SquiLu-ext/sq_postgresql.cpp  \
@@ -107,6 +110,7 @@ SOURCES= \
     ../SquiLu-ext/sq_slave_vm.cpp  \
     ../SquiLu-ext/sq_socket.cpp  \
     ../SquiLu-ext/sq_sqlite3.cpp  \
+    ../SquiLu-ext/sq_bitvector.cpp  \
     ../SquiLu-ext/sq_tinyxml2.cpp  \
     ../SquiLu-ext/sq_zlib.cpp  \
     ../SquiLu-ext/tinyxml2.cpp \
