Fix make files to work with extra parameters

--- a/SquiLu/Makefile
+++ b/SquiLu/Makefile
@@ -1,6 +1,9 @@
 
 SQUIRREL=.
-MAKE=make
+MAKE=make CC=g++ CC_EXTRA_FLAGS="-flto -DNDEBUG -DONLY_ASCII -DNO_ABSTRACT_METHOD -DCUSTOM_DELETE_OPERATOR -DSQ_USE_MKSTEMP  -DSQ_ENABLE_INCLUDES -DSQ_SUBLATIN -DNEED_SUBLATIN_C -DSQUSEDOUBLE" \
+	LD_EXTRA_FLAGS="-flto"
+#MAKE=make CC=g++ CC_EXTRA_FLAGS="-fsanitize=address -DONLY_ASCII -DSQ_USE_MKSTEMP -DSQ_ENABLE_INCLUDES -DSQ_SUBLATIN -DNEED_SUBLATIN_C -DSQUSEDOUBLE"
+#MAKE=make
 
 DIRS=bin lib
 $(shell mkdir -p $(DIRS))
