Fix default compilation to build without libstdc++ dependency

--- a/SquiLu/Makefile
+++ b/SquiLu/Makefile
@@ -1,7 +1,7 @@
 
 SQUIRREL=.
-MAKE=make CC=g++ CC_EXTRA_FLAGS="-flto -DNDEBUG -DONLY_ASCII -DNO_ABSTRACT_METHOD -DCUSTOM_DELETE_OPERATOR -DSQ_USE_MKSTEMP  -DSQ_ENABLE_INCLUDES -DSQ_SUBLATIN -DNEED_SUBLATIN_C -DSQUSEDOUBLE" \
-	LD_EXTRA_FLAGS="-flto"
+MAKE=make CC=g++ CC_EXTRA_FLAGS="-fno-rtti -fno-exceptions -DNDEBUG -DONLY_ASCII -DNO_ABSTRACT_METHOD -DCUSTOM_DELETE_OPERATOR -DSQ_USE_MKSTEMP  -DSQ_ENABLE_INCLUDES -DSQ_SUBLATIN -DNEED_SUBLATIN_C -DSQUSEDOUBLE" \
+	LD_EXTRA_FLAGS=""
 #MAKE=make CC=g++ CC_EXTRA_FLAGS="-fsanitize=address -DONLY_ASCII -DSQ_USE_MKSTEMP -DSQ_ENABLE_INCLUDES -DSQ_SUBLATIN -DNEED_SUBLATIN_C -DSQUSEDOUBLE"
 #MAKE=make
 
